# homework-7

./: alembic.ini  cli.py  main.py  my_select.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 268ae2f71640_initial_migration.py  7243e59a8810_initial_migration.py  f5efb3ea7f90_allow_null_for_teacher_id_in_subjects.py
models/: __init__.py  models.py
scripts/: seed.py
